[tool.poetry]
name = "can"
version = "0.1.0"
description = "friendly RBAC library"
authors = ["xmonader <xmonader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
